test/test_suite2/errors/try_with_unwrap.c3t
// #target: macos-x64
extern fn char*! readLine();
extern fn int! atoi(char*);

extern fn int printf(char* fmt, ...);

fn void main()
{
    char*! line = readLine();
    if (try line)
    {
        int! val = atoi(line);
        if (try val)
        {
            printf("You typed the number %d\n", val);
            return;
        }
    }
    printf("You didn't type an integer :(\n");
}

/* #expect: try_with_unwrap.ll

define void @try_with_unwrap_main() #0 {
entry:
  %line = alloca ptr, align 8
  %line.f = alloca i64, align 8
  %retparam = alloca ptr, align 8
  %val = alloca i32, align 4
  %val.f = alloca i64, align 8
  %retparam1 = alloca i32, align 4
  %0 = call i64 @readLine(ptr %retparam)
  %not_err = icmp eq i64 %0, 0
  br i1 %not_err, label %after.errcheck, label %error

error:                                            ; preds = %entry
  store i64 %0, ptr %line.f, align 8
  br label %after_assign

after.errcheck:                                   ; preds = %entry
  %1 = load ptr, ptr %retparam, align 8
  store ptr %1, ptr %line, align 8
  store i64 0, ptr %line.f, align 8
  br label %after_assign

after_assign:                                     ; preds = %after.errcheck, %error
  %load.err = load i64, ptr %line.f, align 8
  %result = icmp eq i64 %load.err, 0
  br i1 %result, label %if.then, label %if.exit9

if.then:                                          ; preds = %after_assign
  %2 = load ptr, ptr %line, align 8
  %3 = call i64 @atoi(ptr %retparam1, ptr %2)
  %not_err2 = icmp eq i64 %3, 0
  br i1 %not_err2, label %after.errcheck4, label %error3

error3:                                           ; preds = %if.then
  store i64 %3, ptr %val.f, align 8
  br label %after_assign5

after.errcheck4:                                  ; preds = %if.then
  %4 = load i32, ptr %retparam1, align 4
  store i32 %4, ptr %val, align 4
  store i64 0, ptr %val.f, align 8
  br label %after_assign5

after_assign5:                                    ; preds = %after.errcheck4, %error3
  %load.err6 = load i64, ptr %val.f, align 8
  %result7 = icmp eq i64 %load.err6, 0
  br i1 %result7, label %if.then8, label %if.exit

if.then8:                                         ; preds = %after_assign5
  %5 = load i32, ptr %val, align 4
  %6 = call i32 (ptr, ...) @printf(ptr @.str, i32 %5)
  ret void

if.exit:                                          ; preds = %after_assign5
  br label %if.exit9

if.exit9:                                         ; preds = %if.exit, %after_assign
  %7 = call i32 (ptr, ...) @printf(ptr @.str.1)
  ret void
}

